[package]
name = "tokio-benchmarking"
version = "0.1.0"
authors = ["Peter Schafhalter <pschafhalter@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
futures = "0.3.17"